Tanent User Fixes and Inventory and Order Controller edit and Added active users to create user under the company implemented
